--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .header {
   
   display: flex;
@@ -13,6 +15,7 @@
 
 .change_theme, .logo {
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .logo {
@@ -23,4 +26,5 @@
   text-transform: uppercase;
   font-weight: bold;
   font-size: 25px;
+  color: $primary-color
 }
