--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,10 @@ box-sizing: border-box;
 }
 
 body {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  position: relative;
+  background: var(#{--body-background-default});
+  
 }
 
 .container {
